--- a/who/styles/iogt/modules/_m-search.scss
+++ b/who/styles/iogt/modules/_m-search.scss
@@ -41,6 +41,7 @@
   }
   &__subtitle {
     margin: 8px 0;
+    padding: 5px 0 0;
   }
   .highlight-description {
     font-style: italic;
